[package]
name = "vulkano-guide"
version = "0.1.0"
authors = ["Irving Morales <irvingfisica@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.20"
vulkano-shaders = "0.20"
image = "0.23"
vulkano-win = "0.20"
winit = "0.24"